Changes
=======

3.5.2 (unreleased)
------------------

- ...

3.5.1 (2009-02-27)
------------------

- The baseindex, okapiindex, and lexicon used plain counters for various
  lengths, which is unsuitable for production applications.
  Backport code from Zope2 indexes which opportunistically replaces the
  counters with BTree.Length objects.

- Backport non-insane version of baseindex._del_wordinfo from
  Zope2 text index.  This improves deletion performance by
  several orders of magnitude.

- Don't modify given query dictionary in the KeywordIndex.apply method.

- Move FieldIndex's sorting functionality to a mixin class so it can
  be reused by zc.catalog's ValueIndex.

3.5.0 (2008-12-30)
------------------

- Remove zope.testing from dependencies, as it's not really needed.

- Define IIndexSort interface for indexes that support sorting.

- Implement sorting for FieldIndex (adapted from repoze.catalog/ZCatalog).

- Add an ``apply`` method for KeywordIndex/TopicIndex, making them
  implement IIndexSearch that can be useful in catalog.

- Optimize the ``search`` method of KeywordIndex/TopicIndex by using
  multiunion for the ``or`` operator and sorting before intersection for ``and``.

- IMPORTANT: KeywordIndex/TopicIndex now use IFSets instead of IISets.
  This makes it more compatible with other indexes (for example, when
  using in catalog). This change can lead to problems, if your code somehow
  depends on the II nature of sets, as it was before.
  
  Also, FilteredSets used to use IFSets as well, if you have any
  FilteredSets pickled in the database, you need to migrate them to
  IFSets yourself. You can do it like that:
  
      filter._ids = filter.family.IF.Set(filter._ids)
  
  Where ``filter`` is an instance of FilteredSet.

- IMPORTANT: KeywordIndex are now non-normalizing. Because
  it can be useful for non-string keywords, where case-normalizing
  doesn't make any sense. Instead, it provides the ``normalize``