@@ -15,11 +15,47 @@
 
 $Id$
 """
-from setuptools import setup, find_packages
+import sys
+import os
+
+from setuptools import setup, find_packages, Extension
+from distutils.command.build_ext import build_ext
+from distutils.errors import CCompilerError
+from distutils.errors import DistutilsExecError
+from distutils.errors import DistutilsPlatformError
 
 long_description = (open('README.txt').read() +
                     '\n\n' +
                     open('CHANGES.txt').read())
+
+class optional_build_ext(build_ext):
+    """This class subclasses build_ext and allows
+       the building of C extensions to fail.
+    """
+    def run(self):
+        try:
+            build_ext.run(self)
+        
+        except DistutilsPlatformError, e:
+            self._unavailable(e)
+
+    def build_extension(self, ext):
+       try:
+           build_ext.build_extension(self, ext)
+        
+       except (CCompilerError, DistutilsExecError), e:
+           self._unavailable(e)
+
+    def _unavailable(self, e):
+        print >> sys.stderr, '*' * 80
+        print >> sys.stderr, """WARNING:
+
+        An optional code optimization (C extension) could not be compiled.
+
+        Optimizations for this package will not be available!"""
+        print >> sys.stderr
+        print >> sys.stderr, e
+        print >> sys.stderr, '*' * 80
 
 setup(name='zope.index',
       version='3.5.2dev',
@@ -37,5 +73,10 @@ setup(name='zope.index',
                         'ZODB3>=3.8.0b1',
                         'zope.interface'],
       include_package_data = True,
+      ext_modules=[
+          Extension('zope.index.text.okascore',
+              [os.path.join('src', 'zope', 'index', 'text', 'okascore.c')]),
+      ],
       zip_safe=False,
+      cmdclass = {'build_ext':optional_build_ext},
       )
